--- a/doc/practicum.Rmd
+++ b/doc/practicum.Rmd
@@ -29,7 +29,7 @@ header-includes:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, fig.width = 6, fig.height = 4)
 library(lubridate)
 #library(MASS)
 library(brglm)
@@ -257,25 +257,11 @@ df_out_means <- df_primaries%>%
 
 # Introduction
 
-Polarization
-
-
-## Affective polarization introduction
-
-
-In 2008, despite her position as Democratic standard-bearer, supporters of Hillary Clinton's primary campaign were colder towards their party than any other group of Democratic primary voters on the ANES 100-point Feeling Thermometer. Clinton's defeat by Barack Obama in June of 2008 spawned the "Party Unity My Ass" movement, which engaged in various forms of protest against the DNC and pledging *en masse* not to support the (relative) party outsider Barack Obama in the general election^[https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162.html?tid=a_inl_manual].
-Clinton supporters' posture towards their party in 2016 bore little semblance to that of the '08 race. Bernie Sanders---a former independent and self-identified socialist---leaned into the role of an insurgent, anti-establishment candidate; predicating his campaign on a conflict between the working-class and the elites of both major parties. Sanders supporters, angry with the DNC and reluctant to support Clinton in November led a loosely organized movement of Democratic party discontents to found groups like *Justice Democrats* and expand membership of organizations like the *Democratic Socialists of America* and various state and local progressive caucuses to protest perceived slights by the party establishment and support further left and anti-establishment down-ballot candidates. 
-
-This is not particularly surprising on its own. Sanders campaigned against the party establishment---it is not a stretch that he would attract those disillusioned or unhappy with the party. The story is more complicated. Republican supporters of Donald Trump---whose campaign was even more exuberantly hostile towards the Republican party than Sanders' was toward the Democrats---were *warmer* towards their party than any other candidates' supporters, despite the mutual hostility between Trump and established Republican elites. As shown in Fig. 1, supporters of winning candidates tend to be warmer towards their own party than are losers---there is little difference in distributions of out-party affect.
-
-
-## Partisanship
-
 Many scholars have noted a decline in positive feelings towards members of other political parties [@iyengar2012, @ahler2018, @iyengar2018, @mason2015]. The downward spiral of attitudes towards the out-party (and political out-groups more generally) is almost always discussed in the context of "affective polarization" in the mass public, a process by which partisans grow to "increasingly dislike, even loathe, their opponents" [@iyengar2012]. Scholars of political polarization have paid far less attention to the attitudes of partisans towards their own party, which are generally held to be overwhelmingly warm within parties and stable across time. @iyengar2018 goes as far as to argue that attitudes towards one's own party are largely unimportant in informing political behavior.
 
-Recent work has challenged the monolithic characterization of intra-party attitudes. @groenendyk2020 argues that intra-party polarization is occuring along ideological lines as more self-identified moderate Democrats and Republicans become less enthusiastic about their parties while their co-partisans on the left and right respectively grow more favorable towards the party. While I enthusiastically agree that intra-party attitudes are more heterogeneous than is typically thought, I am skeptical that partisans' ideology is a driving force behind increasing in-party heterogeneity. 
+Recent work has challenged the monolithic characterization of intra-party attitudes. @groenendyk2020 argues that intra-party polarization is occurring along ideological lines as more self-identified moderate Democrats and Republicans become less enthusiastic about their parties while their co-partisans on the left and right respectively grow more favorable towards the party. While I enthusiastically agree that intra-party attitudes are more heterogeneous than is typically thought, I am skeptical that partisans' ideology is a driving force behind increasing in-party heterogeneity. 
 
-The accuracy of ideological self-assessments is dubious. Symbolic values and ideological identifiers have little relationship to individuals' actually held political beliefs [@zaller1992, @mclosky1984, @ahler2018, @ahler2015 @mason2018]. Individuals have little idea of what views are typical of a party or ideology and which are heterodox. Partisans self identification as "moderate" or "extreme" may well inform their disposition towards their party but there is no guarantee that those individuals would recognize those  who identify as their "co-ideologues" as such. Thus, characterization of parties as internally ideologically polarized is conceptually fraught given the evidence available.
+The accuracy of ideological self-assessments is dubious. Symbolic values and ideological identifiers have little relationship to individuals' actually held political beliefs [@zaller1992, @mcclosky1984, @ahler2018, @ahler2015 @mason2018]. Individuals have little idea of what views are typical of a party or ideology and which are heterodox. Partisans self identification as "moderate" or "extreme" may well inform their disposition towards their party but there is no guarantee that those individuals would recognize those  who identify as their "co-ideologues" as such. Thus, characterization of parties as internally ideologically polarized is conceptually fraught given the evidence available.
 
 Setting aside the issue of unreliable ideological self reports, there is reason to doubt that the extreme wings of the parties are the most enthusiastic supporters. Particularly since the 2016 Democratic Primaries, journalism and scholarship has been rife with accounts of the animosity exhibited by the activists and elected officials on the party's left towards the more centrist mainline of the party [@azari2017, @thompson2020]. @masket2020 details lingering animosity between supporters and staffers for the 2016 campaigns of Bernie Sanders and Hillary Clinton (as well as a disdain for individuals associated with the Sanders campaign expressed by former Martin O'Malley organizers). Additionally, supporters of the 2016 Sanders and Trump candidacies were motivated largely by distrust in government [@dyck2018].
 
@@ -283,16 +269,18 @@ Particularly in the Democratic Party context it is difficult to square the ideol
 
 ## Primaries
 
+In 2008, despite her position as Democratic standard-bearer, supporters of Hillary Clinton's primary campaign were colder towards their party than any other group of Democratic primary voters on the ANES 100-point Feeling Thermometer. Clinton's defeat by Barack Obama in June of 2008 spawned the "Party Unity My Ass" movement, which engaged in various forms of protest against the DNC and pledging *en masse* not to support the (relative) party outsider Barack Obama in the general election^[https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162.html?tid=a_inl_manual].
+Clinton supporters' posture towards their party in 2016 bore little resemblance to that of the '08 race. Bernie Sanders---a former independent and self-identified socialist---leaned into the role of an insurgent, anti-establishment candidate. Sanders predicated his campaign on a conflict between the working-class Democratic base and the elites of both major parties. Following Sanders's loss his supporters, angry with the DNC and reluctant to support Clinton in November led a loosely organized movement of Democratic party discontents to found groups like *Justice Democrats* and expand membership of organizations like the *Democratic Socialists of America* and various state and local progressive caucuses to protest perceived slights by the party establishment and support further left and anti-establishment down-ballot candidates while the Clinton campaign and DNC attempted to entice their spurned co-partisans back to the fold through campaign promises and adjustments to the party platform [@seitz-wald2016]. 
 
-Vote choice&mdash;or preference for a candidate more generally&mdash;are most often analyzed as the outcome of (potential) voters' preferences and evaluations of candidates' attributes. That primary voters choose their candidate in part to safeguard group cohesion in their party [@wronski2018; @bankertforthcoming] begs the question: what happens to the group when candidates lose? How do partisans react when the preferences of some in the party are advantaged above their own? Scholars of policy feedback have found citizens who perceive themselves as being cut out of government decision making processes to be more disaffected and less participatory in democratic political activities [@soss1999; @bruch2010]. Not only do individuals assess individual programs and actors on the basis of their (perceived) inclusiveness, assessments of individuals' own roles and place in political society are conditioned in part by signals they receive from political and policy actors [@campbell2012]. I argue that this is likely to hold true in the context of primary elections. Primary voters who perceive their party working against their preferred candidate should become more distrusting of political elites and display less affinity for their own party. 
+That Sanders supporters would be oppositional towards the Democratic Party is not all that surprising on its own. Sanders campaigned against the party establishment---it is not a stretch that he would attract those disillusioned or unhappy with the party. The story is more complicated. Republican supporters of Donald Trump---whose campaign was even more exuberantly hostile towards the Republican party than Sanders' was toward the Democrats---were more enthusiastic about their party than any other 2016 candidates' supporters, despite the mutual hostility between Trump and established Republican elites. As shown in Fig. 1, supporters of winning candidates tend to be warmer towards their own party than are losers---there is little difference in distributions of out-party affect.
+
+Vote choice---or preference for a candidate more generally---is most often analyzed as the outcome of (potential) voters' preferences and evaluations of candidates' attributes. That primary voters choose their candidate in part to safeguard group cohesion in their party [@wronski2018; @bankertforthcoming] begs the question: what happens to the group when candidates lose? How do partisans react when the preferences of some in the party are advantaged above their own? Scholars of policy feedback have found citizens who perceive themselves as being cut out of government decision making processes to be more disaffected and less participatory in democratic political activities [@soss1999; @bruch2010]. Not only do individuals assess individual programs and actors on the basis of their (perceived) inclusiveness, assessments of individuals' own roles and place in political society are conditioned in part by signals they receive from political and policy actors [@campbell2012]. I argue that this is likely to hold true in the context of primary elections. Primary voters who perceive their party working against their preferred candidate should become more distrusting of political elites and display less affinity for their own party. 
 
 Party elites may not be *government* policymakers or bureaucrats, but they are certainly *political* actors; their sphere of policy influence is simply constrained to the internal workings of one party&mdash;not the government writ-large. It is unlikely that the blurry distinction between "government" and "political" matters all that much to the rationally ignorant median voter as they assimilate political information and update their evaluations of elites and themselves. Moreover, government employees and party apparatchiks each wield considerable power shaping possible policy outcomes. Insofar as disaffection stems from being "cut out" of the policy process it is not clear that the legal distinction between government and party *should* be affectively salient to observers, political sophisticates or not. Further, primary elections are programs designed and implemented by a vast bureaucracy of national and state parties, private information systems providers, federal government regulators, and local supervisors of elections; structurally similar to many federated programs, even if the primary bureaucracy only becomes salient to the public every two or four years at best. 
 
 In light of these structural similarities, it is worth asking how well insights from the policy feedback literature travel to the context of candidate selection. Theoretically, public perceptions of exclusionary politicking or unfair treatment of candidates by party elites should depress voters' assessment of the nominating process and their affection for the party. Such perceptions signal to the individual both that they hold little power in the nominating process and that those partisan actors who are powerful do not represent the interests of the powerless primary voter in question. In a policy feedback framework, the primary voter perceives a top-heavy, paternalistic party organization and has internalized their own un-belonging within that organization. Concomitant with their declining trust, disaffected partisans have little incentive (whether material or group-motivated) to participate in political activity.
 
-In the presidential context, a primary loss is a rebuke of the preferences of losers supporters and the ascension of the representative of an *outgroup* to the station *de facto* leader of the *in-party*. During the primary season, a primary voter's in-group is not only their fellow Democrats or Republicans, but fellow Sanders, Warren, and Buttigieg; Trump, Cruz, and Rubio voters as well. Those supporters of the opposing primary candidates then constitute an out-group *within* the party, the salience of which is endogenous to the affective tenor of the primary and the degree to which the candidates distinguish themselves from the opposition.
-
-
+Further, individuals conceptualize their in-group in contrast to with an out-group [@tajfel1974; @leonardelli2015; @mead2012]---a conception of the in-group is predicated on drawing clear distinctions with the out-group. The intra-party competition inherent to the primary election environment muddies the typically clear distinction between political in-groups and out-groups. During the Presidential primary season, a primary voter's in-group is not only their fellow Democrats or Republicans, but fellow Sanders, Warren, and Buttigieg; Trump, Cruz, and Rubio voters as well. Those supporters of the opposing primary candidates then constitute an out-group *within* the party, the salience of which is endogenous to the affective tenor of the primary and the degree to which the candidates distinguish themselves from the opposition. In the presidential context the stakes of an undesirable result are particularly high. A Presidential primary loss is a rebuke of the preferences of losers supporters and the ascension of the representative of an *outgroup* to the station *de facto* leader of the *in-party*.
 
 # Trends in Partisan Affect
 
@@ -500,9 +488,6 @@ Cold partisans of both parties consistently express more pessimism about the dir
 
 The differences between affect groups on the behavior and knowledge items are more varied. Cold partisans are more likely to vote for a major outparty presidential candidate and to vote for third-party in Presidential races.There is no significant difference in the proportion of cold and warm partisans who know which party controlled the house before the most recent election, who report talking about politics most days, or in their mean participation scores. Even more surprising, cold partisans were just as likely as warm partisans to report voting in both primary elections and general elections. For their part, warm partisans were more likely to watch campaign related TV and (unsurprisingly) to vote in-party for House and Presidential races.
 
-
-
-
 Finally, for some items very few respondents answered in the affirmative (or reported low levels of the item as in the case of the 6-item participation index) exaggerating the apparent differences between cold and warm groups. To ensure that apparent differences betweeen groups were not a product of low participation *across* groups, an alternative version of figure 4 normalizes each difference by dividing the proportional difference by the sum of the means of both groups. This alternative version of figure 4 is available in the appendix.
 
 $$
@@ -709,12 +694,13 @@ gg_three_wave_df <- read_rds("data/gg-three-wave-str.rds")%>%
 
 
 ```
-```{r gg-three-wave}
+
+```{r gg-three-wave, fig.cap="Three-wave test of primary outcome and strong partisanship"}
   
 gg_three_wave_df%>%
 ggplot(aes(x = choice_dum, y = prop_strong, color = pid_3_1)) +
 	geom_linerange(aes(ymin = prop_strong - 1.95*se_strong, ymax = prop_strong + 1.95*se_strong, color = pid_3_1)) +
-  geom_line(aes(x = as.numeric(choice_dum), color = pid_3_1)) +
+  geom_line(aes(x = as.numeric(choice_dum), color = pid_3_1, linetype = pid_3_1)) +
 	geom_point(aes(shape = pid_3_1), size = 2) +
 	geom_hline(yintercept = 0) +
 	scale_color_manual(values = c("Democrat" = "dodgerblue3",
@@ -727,6 +713,7 @@ ggplot(aes(x = choice_dum, y = prop_strong, color = pid_3_1)) +
 			 x = "Primary Vote Choice",
 			 y = "Difference Between Waves",
 			 color = "Party ID at Wave 1",
+			 linetype = "Party ID at Wave 1",
 			 shape = "Party ID at Wave 1",
 			 caption = "Bootstrapped 95% CIs") +
 	scale_y_continuous(n.breaks = 10)
@@ -736,40 +723,18 @@ ggplot(aes(x = choice_dum, y = prop_strong, color = pid_3_1)) +
 
 [FIGURE] shows the results of a three-wave-test of primary election outcome on strength of partisanship. Each point of the figure represents the change in the proportion of strong partisans present in each group between waves. The first panel shows the within-group change in strong partisanship between the two waves preceding the selection of a presumptive nominee in the relevant party's presidential primary. The second panel shows shows the change in strong partisanship within groups between the second (pre-treatment) wave and the third (post-treatment wave). The treatment in this case is the revelation of one candidate as the primary winner. Under this implementation of the three-wave-test, the average treatment effect (ATE) is calculated as the difference-in-difference in the proportion of strong partisans between winners and losers before and after the results of the primary election become clear:
 
-$$[\mu(w)_{3} - \mu(l)_{2}]-[\mu(w)_{2} - \mu(l)_{1}]$$
+$$
+[\mu(w)_{3} - \mu(l)_{2}]-[\mu(w)_{2} - \mu(l)_{1}]
+$$
+
 where $\mu(w)_t$ is the proportion of strong partisans supporting a winning candidate at time $i$, $\mu(l)_t$ is the proportion of strong partisans supporting a losing candidate at time $t$ where all $t<3$ occurs pre-treatment and $t=3$ occurs post-treatment. A larger difference (a steeper slope) between winners and losers after the treatment is primed (after a presumptive nominee becomes apparent) suggests an effect of primary outcome on strength of partisanship.
 
-Tests which compare only the pre and post treatment absolute value of a quantity are vulnerable to confounding pre-treatment effects [@lenz2013]. Analysis of cross-sectional data is unable to establish causal precedence---a situation in which cold partisans gravite towards ill-equipped primary candidates is observationally equivalent to one in which a primary loss causes individuals to dislike their party. By comparing the "effect" of a primary outcome before and after the outcome is known, unobserved pre-treatment differences are cancelled out.
+Tests which compare only the pre and post treatment absolute value of a quantity are vulnerable to confounding pre-treatment effects [@lenz2013]. Analysis of cross-sectional data is unable to establish causal precedence---a situation in which cold partisans gravite towards ill-equipped primary candidates is observationally equivalent to one in which a primary loss causes individuals to dislike their party. By comparing the "effect" of a primary outcome before and after the outcome is known, unobserved pre-treatment differences between supporters of winning and losing candidates are cancelled out..
+
+Referring to Figure 4, the flat slope of Democratic and Republican lines in the left-hand panel indicate that the proportion of strong partisans in each group---eventual winners and eventual losers---changed by similar amounts between  pre-treatment waves 1 and 2. Whichever unobserved variables may have affected the tendency of primary voters to identify as strong partisans appear to affect winners and losers of both parties similarly. The right-hand panel shows the difference between wave 2 (pre-treatment) and wave 3 (post-treatment). While both 
 
 
 ## Survey Experiment
-
-
-To gain further causal leverage over the question of primary election outcomes and partisans' affect, an original survey experiment is conducted, randomly assigning a primary election outcome to a counterfactual congressional primary election. The survey was programmed using the Qualtrics survey platform and participants were recruited using Amazon's *Mechanical Turk* (Mturk) platform.
-
-### Experimental Design
-
-[outline hypotheses for experiment]
-
-The cross sectional 
-
-After agreeing to partipate in the survey, subjects are asked to divulge their partisan affiliation. Subjects who self-identified as political independents were asked towards which party they tended to lean. Following the insight of @klar2016 that leaning independents are best understood as "secret partisans", leaning independents were coded as partisans of whichever party they indicated a preference towards. Those who did not indicate a preference were excluded from all subsequent analyses---while the attitudes and actions of these true independents are no doubt important, they fall outside the scope conditions of this investigation.
-
-Next, participants were shown vignettes of two candidates and told that these candidates had competed against one another in a 2020 congressional primary election for the participant's party. The names of these candidates were drawn from a pool of Democratic and Republican candidates who had each participated in a congressional primary for an open seat in a district in which an out-party candidate eventually won election. In other words, none of the candidates whose names were used were members of congress during or after the 2020 election cycle. This set of names was chosen to minimize the chance of participants recognizing the candidates. Additionally, though it is unlikely that participants recruited through MTurk would seek out external information for a task, the use of general-election losing non-incumbents' names reduces the accessibility of official policy statements, platforms, or campaign materials.
-
-In addition to candidates' names, the vignettes include basic personal information---party affiliation, occupation, marital status, and number of children---as well as a series of policy statements that participants were told "closely match the candidates' positions on a variety of issues." In reality, these policy positions were randomly assigned to each candidate from a set of two policy statements, one moderate and one extreme, across several issue areas. Republican respondents were shown statements on climate change, abortion, policing, and taxes. Democrats were shown statements reflecting the candidates' views on the Green New Deal, marijuana legalization, policing, and taxes. It was possible for candidates to take identical positions on any given issue and participants were informed of this in order to reduce confusion. The text of these statements can be read in this study's supporting information. Importantly, this study is not concerned with *why* participants preferred one candidate over the other, simply with how a chosen candidate's fate influences individuals' partisan identity and sense of political efficacy. These candidate vignettes are intended to provide enough information to participants so as to make the candidates appear credible, and to allow the participant to form a preference for a candidate through a variety of mechanisms. Candidates' personal information is included so that participants do not view the vignettes solely as a collection of policy statements, but as a summary of a real person seeking public office.
-
-After reviewing the vignettes, participants are asked to "write a sentence or two explaining why [they] chose [their] candidate over the other". This free-response information is solicited from participants in order to slow down the participants' (who are often trying to complete tasks as quickly as possible) [CITE DOUG] thought and to increase the cognitive investment in their choice of candidate. Real world primary elections drag on for weeks and months while participants in this experiment are exposed to the candidates only for a few minutes.
-
-After submitting their preferences, participants are randomly assigned to one of three groups. Those in "Loss" treatment are told that their preferred candidate was defeated in the primary, those in the "Win" treatment are told that their candidate won the primary and went on to compete in the general election. Participants in the control group were simply thanked for selecting a candidate. 
-
-After receiving the treatment, participants were asked to rate the Democratic Party, Republican Party, and political independents on a feeling thermometer from 0-100. Participants were also asked a battery of political efficacy questions---how likely they would be to vote in the district's general election, the degree to which  they trust the federal government to do what is right, and the degree to which they are satisfied with the way democracy works in the United States. After answering these questions the participants are debriefed that the candidates' personal information and policy preferences do not necessarily reflect those of the actual candidate, at which point the experiment concludes.
-
-In total, 473 participants were surveyed, of these only 18 identified as true independents, resulting in a final sample of $n = 455$. Summary statistics for these responses are presented in the table below.
-
-
-
-
 ```{r exp-wrangling, include = FALSE}
 
 # Function to extract p from polr
@@ -823,6 +788,10 @@ exp_df <- read_csv("data/raw/ap-experiment-08-22.csv")%>%
 				 therm_outparty = as.numeric(case_when(pid_3 == "Democrat" ~ therm_rep,
 				 																		 pid_3 == "Republican" ~ therm_dem,
 				 																		 TRUE ~ NA_character_)),
+				 satisfied_democracy = case_when(group == "Control" ~ NA_character_,
+				                                 TRUE ~ satisfied_democracy),
+				 trust_gov = case_when(group == "Control" ~ NA_character_,
+				                       TRUE ~ trust_gov),
 				 vote_likely = factor(case_when(pid_3 == "Democrat" & group == "Loss" ~ d_gen_vote_loss,
 				 												pid_3 == "Democrat" & group == "Win" ~ d_gen_vote_win_con,
 				 												pid_3 == "Republican" & group == "Loss" ~ r_gen_vote_loss,
@@ -885,6 +854,51 @@ ggplot(m_df, aes(x = therm_inparty)) +
 	facet_wrap(vars(group))
 
 ```
+
+
+To gain further causal leverage over the question of primary election outcomes and partisans' affect, an original survey experiment is conducted, randomly assigning a primary election outcome to a counterfactual congressional primary election. The survey was programmed using the Qualtrics survey platform and participants were recruited using Amazon's *Mechanical Turk* (Mturk) platform.
+
+### Experimental Design
+
+[outline hypotheses for experiment]
+
+The cross sectional 
+
+After agreeing to partipate in the survey, subjects are asked to divulge their partisan affiliation. Subjects who self-identified as political independents were asked towards which party they tended to lean. Following the insight of @klar2016 that leaning independents are best understood as "secret partisans", leaning independents were coded as partisans of whichever party they indicated a preference towards. Those who did not indicate a preference were excluded from all subsequent analyses---while the attitudes and actions of these true independents are no doubt important, they fall outside the scope conditions of this investigation.
+
+Next, participants were shown vignettes of two candidates and told that these candidates had competed against one another in a 2020 congressional primary election for the participant's party. The names of these candidates were drawn from a pool of Democratic and Republican candidates who had each participated in a congressional primary for an open seat in a district in which an out-party candidate eventually won election. In other words, none of the candidates whose names were used were members of congress during or after the 2020 election cycle. This set of names was chosen to minimize the chance of participants recognizing the candidates. Additionally, though it is unlikely that participants recruited through MTurk would seek out external information for a task, the use of general-election losing non-incumbents' names reduces the accessibility of official policy statements, platforms, or campaign materials.
+
+In addition to candidates' names, the vignettes include basic personal information---party affiliation, occupation, marital status, and number of children---as well as a series of policy statements that participants were told "closely match the candidates' positions on a variety of issues." In reality, these policy positions were randomly assigned to each candidate from a set of two policy statements, one moderate and one extreme, across several issue areas. Republican respondents were shown statements on climate change, abortion, policing, and taxes. Democrats were shown statements reflecting the candidates' views on the Green New Deal, marijuana legalization, policing, and taxes. It was possible for candidates to take identical positions on any given issue and participants were informed of this in order to reduce confusion. The text of these statements can be read in this study's supporting information. Importantly, this study is not concerned with *why* participants preferred one candidate over the other, simply with how a chosen candidate's fate influences individuals' partisan identity and sense of political efficacy. These candidate vignettes are intended to provide enough information to participants so as to make the candidates appear credible, and to allow the participant to form a preference for a candidate through a variety of mechanisms. Candidates' personal information is included so that participants do not view the vignettes solely as a collection of policy statements, but as a summary of a real person seeking public office.
+
+After reviewing the vignettes, participants are asked to "write a sentence or two explaining why [they] chose [their] candidate over the other". This free-response information is solicited from participants in order to slow down the participants' (who are often trying to complete tasks as quickly as possible) [CITE DOUG] thought and to increase the cognitive investment in their choice of candidate. Real world primary elections drag on for weeks and months while participants in this experiment are exposed to the candidates only for a few minutes.
+
+After submitting their preferences, participants are randomly assigned to one of three groups. Those in "Loss" treatment are told that their preferred candidate was defeated in the primary, those in the "Win" treatment are told that their candidate won the primary and went on to compete in the general election. Participants in the control group were simply thanked for selecting a candidate. 
+
+After receiving the treatment, participants were asked to rate the Democratic Party, Republican Party, and political independents on a feeling thermometer from 0-100. Participants were also asked a battery of political efficacy questions---how likely they would be to vote in the district's general election, the degree to which  they trust the federal government to do what is right, and the degree to which they are satisfied with the way democracy works in the United States. After answering these questions the participants are debriefed that the candidates' personal information and policy preferences do not necessarily reflect those of the actual candidate, at which point the experiment concludes.
+
+In total, 473 participants were surveyed, of these only 18 identified as true independents, resulting in a final sample of $n = 455$. Summary statistics for these responses are presented in Table [NUMBER]. Of note, while the distribution of in-party feeling thermometer scores is very similar to the distribution of scores drawn from the ANES timeseries study ($\mu = 80.9$), the distribution of out-party scores in the Mturk sample skew substantially higher than the mean out-party thermometers as reported in the ANES ($\mu = 54.5$).
+
+```{r}
+
+sum_df <- m_df %>% 
+  mutate(therm_ind = as.numeric(therm_ind)) %>% 
+  rename(`Therm. In-party` = therm_inparty,
+         `Therm. Out-party` = therm_outparty,
+         `Therm. Independents` = therm_ind,
+         `Democratic Satisfaction` = satisfied_democracy,
+         `Trust in Government` = trust_gov,
+         `Vote Likelihood` = vote_likely) %>%
+  select(-loss_dum_nc) 
+datasummary_balance( ~group,
+                    data = sum_df,
+                    output = "gt",
+                    ) %>% 
+  tab_header(title = "Summary Statistics for Experimental Data")
+
+
+```
+
+
 
 ## Experimental Results
 
